# Algorand-Rust-FFIs

./: .gitignore  Cargo.toml  bun.lockb  package.json
crates/algo_models_ffi/tests/js/: package.json
crates/algo_models_ffi/tests/js/pkg/: algo_models_ffi.js
crates/liquid_gossip/: Cargo.toml  build.sh
crates/liquid_gossip/src/: lib.rs
crates/liquid_gossip/tests/js/: bun.lockb  index.test.ts  package.json
examples/next.js/: README.md  next.config.ts  package.json
examples/next.js/src/app/: layout.tsx  page.module.css  page.tsx
examples/next.js/src/components/: TestClient.tsx  TestServer.tsx
examples/next.js/src/lib/: test.ts
examples/react/lib/: index.ts  test.ts  wallet.ts
examples/react/lib/components/: TestClient.tsx  TestServer.tsx
