[package]
name = "liquid_gossip"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.95"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.36"

iroh = { git = "https://github.com/n0-computer/iroh.git", branch = "matheus23/iroh-browser", default-features = false }
